feat: change the welcome message

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -80,7 +80,7 @@
 <body>
     <div class="grid"></div>
     <div class="container">
-        <h1>&lt;Hello Devops/&gt;</h1>
+        <h1>&lt;Hello Devops & CDE./&gt;</h1>
     </div>
 </body>
 
